<?xml version="1.0"?>
<package format="2">
  <name>v2v_msgs</name>
  <version>0.0.0</version>
  <description>The v2v_msgs package</description>

  <maintainer email="dingyongqiang0802@gmail.com">dingyongqiang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
